--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@clerk/nextjs": "^6.18.5",
+    "@prisma/client": "^6.7.0",
     "next": "15.3.1",
     "postcss": "^8.5.3",
     "react": "^19.0.0",
