--- a/package.json
+++ b/package.json
@@ -10,14 +10,24 @@
   },
   "dependencies": {
     "@clerk/nextjs": "^6.18.5",
+    "@hookform/error-message": "^2.0.1",
+    "@hookform/resolvers": "^5.0.1",
     "@prisma/client": "^6.7.0",
+    "@radix-ui/react-label": "^2.1.6",
+    "@radix-ui/react-navigation-menu": "^1.2.12",
+    "@radix-ui/react-slot": "^1.2.2",
+    "@radix-ui/react-toast": "^1.2.13",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
+    "input-otp": "^1.4.2",
     "lucide-react": "^0.509.0",
     "next": "15.3.1",
+    "next-themes": "^0.3.0",
     "postcss": "^8.5.3",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-hook-form": "^7.56.3",
+    "sonner": "^2.0.3",
     "tailwind-merge": "^3.2.0"
   },
   "devDependencies": {
